namespaces/default/patsy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patsy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patsy
  template:
    metadata:
      labels:
        app: patsy
    spec:
      containers:
        - name: patsy
          image: ghcr.io/python-discord/patsy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          startupProbe:
            httpGet:
              path: /ping
              port: http
              httpHeaders:
                - name: Host
                  value: patsy.pythondiscord.com
            failureThreshold: 3
            periodSeconds: 1
          securityContext:
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
